12/01/2004
----------
1. return false in html editor compatibility test for browser Opera
   in openwebmail-send


11/29/2004
----------
1. add -u (--unlock) option to openwebmail-tool.pl,
   it removes the file locks for specific openwebmail user by killing the
   processes holding the locks
ps: This function requires the program 'lsof',
    lsof is available at http://people.freebsd.org/~abe/


11/27/2004
----------
1. fix the color of listview in addressbook when lightbar is disabled
   (thanks to Alex Teslik, alex.AT.acatysmoof.com)
2. Hungarian language file translation update
   (thanks to Posz Marton, ful_s.AT.fazekas.hu)


11/26/2004
----------
1. Bulgarian language and template files translation update
   (thanks to Veselin Slavov, vess.AT.slavof.net)
2. fix a but that addressbook related function in message reading/composing
   was not disabled when option enable_addressbook is set to no
3. fix a problem in mime.pl that encode_mimewords didn't encode two bytes of
   a big5 char as a whole
   (reported by wongyf.AT.mail.savs.ilc.edu.tw)


11/25/2004
----------
1. fix a problem that when dangerous chars in foldername in was silently
   removed in folder creation, the resulted string might contain invalid
   chars to user current charset
   (reported by chip.AT.turtle.ee.ncku.edu.tw)
2. new mirror site at Beijing, China
   http://web.lasg.ac.cn/openwebmail/
   (thanks to Wang Jun, wjun.AT.mail.iap.ac.cn)
3. fix a problem that shares/vfile.pl won't work without Text::Iconv.pm
   (reported by marvi.AT.menhir.biz, Marvi Benedet)
4. Polish language and template files translation update
   (thanks to Pawel Foremski, pjf.AT.gna.org)
5. Italian language and template files translation update
   (thanks to Benedet Marvi, marvi.AT.menhir.biz)


11/24/2004
----------
1. fix the "Undefined subroutine &main::get_messageids_sorted_by_date" error
   in openwebmail-tool.pl that
   (reported by Yang Yao-Strong, ysyang.AT.visionnext.com)