@@ -17,7 +17,7 @@
 
 name			Open WebMail
 version			2.41
-releasedate		20041201
+releasedate		20041202
 
 ##############################################################################
 # host dependent configuration
